# TUM_23WS_CPP_Course

./: CMakeLists.txt  README.md
hw01/: hw01.cpp  hw1  library.cpp  library.h  test.cpp
hw02/: CMakeLists.txt  DartConfiguration.tcl  combinatorics.cpp  combinatorics.h  compile_commands.json  hw02  hw02.h  run.cpp
hw02/tests/hw02/: testhw02_include-b858cb2.cmake
hw03/: CMakeLists.txt  contact_list.cpp  contact_list.h  hw03.h  run.cpp
hw04/: CMakeLists.txt  hw04.h  run.cpp  util.cpp  util.h  vm.cpp  vm.h
hw05/: CMakeLists.txt  hw05.h  run.cpp  token.cpp  token.h  validator.cpp  validator.h
hw06/: CMakeLists.txt  run.cpp  vector.cpp  vector.h
hw07/: CMakeLists.txt  audio.cpp  audio.h  document.cpp  document.h  file.cpp  file.h  filecontent.cpp  filecontent.h  filesystem.cpp  filesystem.h  hw07.h  image.cpp  image.h  run.cpp  video.cpp  video.h
hw08/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  filedescriptor.cpp  filedescriptor.h  hw08.h  run.cpp  server.cpp  server.h  socket.cpp  socket.h
hw09/: CMakeLists.txt  hw09.h  run.cpp  vector.h
hw10/: CMakeLists.txt  fibonacci.h  hw10.h  primes.cpp  primes.h  quadruple.cpp  quadruple.h  run.cpp
hw11/: CMakeLists.txt  constexprmap.h  hw11.h  run.cpp
hw12/: CMakeLists.txt  monitor.cpp
tests/: CMakeLists.txt
tests/hw01/: compile  test  test01.cpp
tests/hw02/: CMakeLists.txt  test02.cpp
tests/hw03/: CMakeLists.txt  test03.cpp
tests/hw04/: CMakeLists.txt  test04.cpp
tests/hw05/: CMakeLists.txt  test05.cpp
tests/hw06/: CMakeLists.txt  test06.cpp
tests/hw07/: CMakeLists.txt  test07.cpp
tests/hw08/: CMakeLists.txt  test08.cpp
tests/hw09/: CMakeLists.txt  test09.cpp
tests/hw10/: CMakeLists.txt  test10.cpp
tests/hw11/: CMakeLists.txt  test11.cpp
tests/hw12/: CMakeLists.txt  test12.cpp
